--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+#logo-image{
+    width: 100%;
+}
+#formLogin{
+    padding: 50px;;
+}
