--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,6 +3,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
 <!-- Image and text -->
   <a class="navbar-brand" href="#">
     <img src="/assets/images/icon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -21,7 +22,7 @@
           Administración
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Categorias</a>
+          <a class="dropdown-item" [routerLink]="['/categories',1]">Categorias</a>
           <a class="dropdown-item" href="#">Productos</a>
           <a class="dropdown-item" href="#">Usuarios</a>
         </div>
@@ -34,6 +35,9 @@
           <a class="dropdown-item" href="#">Ventas</a>
           <a class="dropdown-item" href="#">Invetarios</a>
         </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)='logOut()'>Salir</a>
       </li>
     </ul>
   </div>
